--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body {
     background-color:#383D58
 }
 
-<title>DocumentProgramação</title>
+<title>Programação</title>
 <link rel=”stylesheet” href=”style.css”>
