--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #383D58;
+    background-color:#383D58;
 }
+
+<title>Programação</title>
 <link rel="stylesheet" href="style.css">
 
