--- a/style.css
+++ b/style.css
@@ -87,3 +87,5 @@ body {
 .container__botao {
     background-color: var(--botao-azul);
     }
+    background-color: var(--botao-azul);
+border-radius: 5px;
